# rust_tracker

./: Cargo.toml  README.md
migrations/: 001_create_tasks.sql
src/: api.rs  cli.rs  db.rs  handlers.rs  main.rs  models.rs
