[package]
name = "task_tracker"
version = "0.1.0"
edition = "2021"


[dependencies]
# async runtime
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }


# CLI
clap = { version = "4.3", features = ["derive"] }


# HTTP server
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# DB
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }


# logging
tracing = "0.1"
tracing-subscriber = "0.3"


# utilities
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }


[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }


[profile.release]
opt-level = 3
